# consulta_pdi

./: pyproject.toml  regex.py  requirements.txt  secrets.json
consulta_pdi/: __init__.py  alternative.py  constants.py  functions.py  regex.py
